-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1021 2011-05-13 01:55:04 jluis Exp $
-----------------------------------------------------------------------------------------

2011-05-11	jluis
	* grdimage_func.c:	Now reads also indexed and gray scale images.
				Use white for NaN color in images writen with gdalwrite. 
	* gmt_gdalwrite.c:	When known, save projection info in GeoTiff files.

2011-05-09	pwessel
	* minmax_func.c:	Now honors the column-specific formatting.
	* grdinfo_func.c:	---"---
	* grdfft_func.c:	Now -D scale is 1 by default.  Fixed porting bugs.
	* grdimage_func.c:	When image is grayscale and -Q is used then image must be
				converted to 24-bit and we set NaN color to a non-gray value.
	* psbasemap_func.c:	The -L now works for plain scales also.
	* gmt_support.c:	Only apply grid and image BCs on sides not set with extended data.

2011-05-08	pwessel
	* *.c:			All deprecated options under #ifdef GMT_COMPAT now will give
				information about the new option.

2011-05-07	pwessel
	* gmt_grdio.c:		Failed to create proper old-style v3 netcdf file if selected
				for the output in grdblend.
	* gmt_agc_io.c:		Needed char floatvalue[PARAMSIZE+1], with the 1 to hold final \0
	* grdblend_func.c:	Now supports all grid formats either directly or via reformatting.
	* gmt_*.c:		All non-public functions start with gmt_ rather than GMT_.

2011-05-05	pwessel
	* gmtconvert_func.c:	The -T was applied before reading, which reset -m.
	* mapproject_func.c:	The -L would set output types as lon/lat even for Cartesian data.

2011-05-04	pwessel
	* gmtapi_util.c:	Set BCs for all grids regardless of read-source, even if
				read-only (REF) since we don't change grid, just the pad
				which is not considered part of the data.
	* imgsrc/img2grd_func.c:	Made clear that -D, -I, -T are optional and added
				-n to change how interpolations are done.  Also allow -S
				with no scale which will infer scale from filename.